--- a/index.html
+++ b/index.html
@@ -4,9 +4,65 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <link rel="stylesheet" type="text/css" href="css/index.css">
+  <title>Haseforio</title>
 </head>
 <body>
-  Helllo.
+  <content>
+    <!-- ハンバーガーメニュー -->
+    <menu class="menu">
+      <div class="humb-menu"></div>
+    </menu>
+      <main>
+      <!-- 背景〇 -->
+      <div class="title-back">
+        <!-- タイトル -->
+        <div class="title-massage">
+          <p class="name1">----</p>
+          <p class="name2">--------------------</p>
+          <span class="jobs">Web Coder & Programmer</span>
+        </div>
+      </div>
+    </main>
+
+      <!-- メニューバー -->
+      <div class="nav">
+        <div class="border">
+          <li class="menu-about"><a>A</a></li>
+          <li class="menu-works"><a>W</a></li>
+          <li class="menu-blog"><a>B</a></li>
+          <li class="menu-contact"><a>C</a></li>
+        </div>
+      </div>
+    </div>
+  </content>
+  <content>
+    <h3>About</h3>
+    <div>
+      massage...
+    </div>
+  </content>
+
+  <content>
+    <h3>Works</h3>
+    <div>
+      massage...
+    </div>
+  </content>
+
+  <content>
+    <h3>Blog</h3>
+    <div>
+      massage...
+    </div>
+  </content>
+
+  <content>
+    <h3>Contact</h3>  
+    <div>
+      massage...
+    </div>
+  </content>
+  <footer></footer>
 </body>
 </html>
